  * sync: Ensure that pending changes to git-annex branch are committed
    when in direct mode. (Fixing a very minor reversion.)
  * WORM backend: Switched to include the relative path to the file inside
    the repository, rather than just the file's base name. Note that if you're
    relying on such things to keep files separate with WORM, you should really
    be using a better backend.

 -- Joey Hess <joeyh@debian.org>  Thu, 04 Sep 2014 16:17:22 -0400

git-annex (5.20140831) unstable; urgency=medium

  * Make --help work when not in a git repository. Closes: #758592
  * Ensure that all lock fds are close-on-exec, fixing various problems with
    them being inherited by child processes such as git commands.
  * When accessing a local remote, shut down git-cat-file processes
    afterwards, to ensure that remotes on removable media can be unmounted.
    Closes: #758630
  * Fix handing of autocorrection when running outside a git repository.
  * Fix stub git-annex test support when built without tasty.
  * Do not preserve permissions and acls when copying files from
    one local git repository to another. Timestamps are still preserved
    as long as cp --preserve=timestamps is supported. Closes: #729757

 -- Joey Hess <joeyh@debian.org>  Sun, 31 Aug 2014 12:30:08 -0700

git-annex (5.20140817) unstable; urgency=medium

  * New chunk= option to chunk files stored in special remotes.
    Supported by: directory, S3, webdav, gcrypt, rsync, and all external
    and hook special remotes.
  * Partially transferred files are automatically resumed when using
    chunked remotes!
  * The old chunksize= option is deprecated. Do not use for new remotes.
  * Legacy code for directory remotes using the old chunksize= option
    will keep them working, but more slowly than before.
  * webapp: Automatically install Konqueror integration scripts
    to get and drop files.
  * repair: Removing bad objects could leave fsck finding no more